funçao getPOkemon feita

--- a/src/style.css
+++ b/src/style.css
@@ -12,9 +12,8 @@ body{
 }
 
 .title{
-	font-family: 'Alfa Slab One', cursive;
+	font-family: 'Amatic SC', cursive;
 	color: black;
-	font-style: 
 	font-size: 30px;
 }
 
